api is connected and working for retrieving data using user input

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,14 +13,18 @@
 <body>
 <h1 style="font-weight: bold;">Book<span class="agbalumo-regular">Keeper</span></h1>
 
-<div class="wrap">
-    <div class="search">
-       <input type="text" class="searchTerm" placeholder="Which book are you looking for?">
-       <button type="submit" class="searchButton">
-        <i class="fa-solid fa-magnifying-glass"></i>
-      </button>
-    </div>
- </div>
+
+<form action="/" method="post">
+    <div class="wrap">
+        <div class="search">
+           <input type="text" class="searchTerm" name='bookTitle' placeholder="Which book are you looking for?">
+           <button type="submit" class="searchButton">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </div>
+     </div>
+</form>
+
 
 
 </body>
