need to ensure I can continue to search while my db data is visible

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,12 +29,11 @@
 
 <!-- Fetching Data from API -->
 
+<img src="<%= bookCover%>" alt="">
+
 <!-- Fetching data from DB -->
-<% for(let books of dbData){ %>
-    <h1><%= books.title%></h1>
-    <h2> <%= books.author%></h2>
-    <h3> <%= books.published%></h3>
-<%}%>
+
+
 
 </body>
 </html>
