--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    
-</body>
+<!-- About Button to Open Modal -->
+<button id="openModal" class="about-btn">About</button>
+
+<!-- The Modal -->
+<div id="aboutModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h1 class="about-modal">About</h1>
+    <p>
+        Welcome to BookKeeper. <br>
+        Simple app use to search books using the Open Library API. <br>
+        Search for a book below, and if you have read it, add it to the library
+    </p>
+  </div>
+</div>
