--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -132,3 +132,66 @@ body {
   justify-content: center;
   font-weight: bold;
 }
+
+hr{
+  border: none;
+  border-top: 8px dotted rgb(196, 196, 196);
+  margin: 0 750px;
+  background: transparent;
+}  
+
+.sort-library{
+ font-weight: normal;
+}
+
+
+/* Style the About Button */
+.about-btn {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color:transparent;
+  color: rgb(2, 2, 2);
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.about-btn:hover {
+  background-color: #0597aa;
+  color: white;
+}
+
+/* Modal Background */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* Modal Content */
+.modal-content {
+  background: white;
+  padding: 20px;
+  width: 50%;
+  margin: 15% auto;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Close Button */
+.close {
+  float: right;
+  font-size: 24px;
+  cursor: pointer;
+}
+
