--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -150,8 +150,8 @@ hr{
   position: fixed;
   top: 20px;
   right: 20px;
-  background-color:transparent;
-  color: rgb(2, 2, 2);
+  background-color:black;
+  color: rgb(255, 255, 255);
   border: none;
   padding: 10px 20px;
   font-size: 16px;
