few minor changes--- next phase is to add authentication and a few more routes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,9 +20,10 @@
     <span class="close">&times;</span>
     <h1 class="about-modal">About</h1>
     <p>
-        Welcome to BookKeeper. <br>
-        Simple app use to search books using the Open Library API. <br>
-        Search for a book below, and if you have read it, add it to the library
+        Welcome to BookKeeper. <br><br>
+        This app lets me keep track of all the books I've read. <br><br>
+        Using the Open Library API, I can search for the books I've read then add them
+        to my library.
     </p>
   </div>
 </div>
